# sfr-tv-box-remote

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  PROGRESS.md  PROJECT_SPEC.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: COMMANDS_SPEC.md  DISCOVERY_SPEC.md  RELEASE_PROCESS.md  STB8_LISTENER_SPEC.md
scripts/: run_discovery.py  sfr_box_remote.py  sfr_tv_box_remote.py
sfr_box_core/: base_driver.py  constants.py  discovery.py
sfr_tv_box_core/: base_driver.py  constants.py  discovery.py  stb8_driver.py
tests/: test_base_driver.py  test_discovery.py  test_run_discovery_script.py  test_sfr_box_remote_script.py  test_sfr_tv_box_remote_script.py  test_stb8_driver.py
