[project]
name = "sfr-tv-box-remote"
version = "0.1.0"
dependencies = [
    "websockets>=12.0",
    "zeroconf>=0.131.0",
    "aiohttp>=3.9.0",
]

[tool.setuptools.packages.find]
include = ["sfr_box_core", "custom_components*"]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = "."
addopts = "--cov=sfr_tv_box_core --cov=scripts --cov-report=term --cov-report=xml --cov-fail-under=80"

